deploy/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: momo-api
  labels:
    app.kubernetes.io/name: momo-api
spec:
  selector:
    app.kubernetes.io/name: momo-api
  ports:
    - name: http
      port: 80
      targetPort: http
    - name: metrics
      port: 9464
      targetPort: metrics
